--- a/index.html
+++ b/index.html
@@ -115,6 +115,46 @@
                     </div>
                 </div>
             </section>
+            <section class="journal">
+                <div class="inner">
+                    <h2>journal</h2>
+                    <ul class="list">
+                        <li><a href="#">
+                            <p class="img"><img src="img/journal_1.jpg" alt=""></p>
+                            <h3>화장품</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. \
+                                Incidunt ratione a fugit assumenda beatae 
+                                nam ex ipsa ipsam cupiditate, dolorum in obcaecati
+                                 minima rem eaque quia harum illum nesciunt tempora.</p>
+                        </a></li>
+                        <li><a href="#">
+                            <p class="img"><img src="img/journal_2.jpg" alt=""></p>
+                            <h3>화장품</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. \
+                                Incidunt ratione a fugit assumenda beatae 
+                                nam ex ipsa ipsam cupiditate, dolorum in obcaecati
+                                 minima rem eaque quia harum illum nesciunt tempora.</p>
+                        </a></li>
+                        <li><a href="#">
+                            <p class="img"><img src="img/journal_3.jpg" alt=""></p>
+                            <h3>화장품</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. \
+                                Incidunt ratione a fugit assumenda beatae 
+                                nam ex ipsa ipsam cupiditate, dolorum in obcaecati
+                                 minima rem eaque quia harum illum nesciunt tempora.</p>
+                        </a></li>
+                        <li><a href="#">
+                            <p class="img"><img src="img/journal_4.jpg" alt=""></p>
+                            <h3>화장품</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. \
+                                Incidunt ratione a fugit assumenda beatae 
+                                nam ex ipsa ipsam cupiditate, dolorum in obcaecati
+                                 minima rem eaque quia harum illum nesciunt tempora.</p>
+                        </a></li>
+                    </ul>
+                </div>
+
+            </section>
 
 
 
