--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
             </section>
 
+       
 
 
 
@@ -177,6 +178,23 @@
 
 
         </div>
+
+             <!--footer-->
+             <footer>
+                <div class="inner">
+                    <h1 class="footerLogo">a</h1>
+                    <ul class="contact">
+                        <li>Carrer del jardi Botanic 4, Palma De Mallorca, 07012</li>
+                        <li>+34 123 456 789 | abcd.com</li>
+                    </ul>
+                    <ul class="sns">
+                        <li><a href="#">INSTARGRAM</a></li>
+                        <li><a href="#">FACEBOOK</a></li>
+                        <li><a href="#">LINKED</a></li>
+                    </ul>
+                </div>
+            </footer>
+
 
     </div>
     
