--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--script-->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/script_main.js"></script>
+    <script src="js/scrolla.jquery.min.js"></script>
 </head>
 <body>
 
@@ -24,7 +25,7 @@
         <div class="contents">
             <section class="visual">
                 <video class="waves" autoplay muted loop playsinline>
-                    <source src ="img/walk.mp4">
+                    <source src ="img/">
 
 
                 </video>
@@ -56,10 +57,18 @@
             <section class="approach">
                 <div class="inner">
                     <ul class="list">
-                        <li><a href="#"><img src="img/approach_1.jpg"></a></li>
-                        <li><a href="#"><img src="img/approach_2.jpg"></a></li>
-                        <li><a href="#"><img src="img/approach_3.jpg"></a></li>
-                        <li><a href="#"><img src="img/approach_4.jpg"></a></li>
+                        <li><a href="#"><img src="img/approach_1.jpg">
+                            <span><b>랑</b>데뷰</span>
+                        </a></li>
+                        <li><a href="#"><img src="img/approach_2.jpg">
+                            <span><b>랑</b>데뷰</span>
+                        </a></li>
+                        <li><a href="#"><img src="img/approach_3.jpg">
+                            <span><b>랑</b>데뷰</span>
+                        </a></li>
+                        <li><a href="#"><img src="img/approach_4.jpg">
+                            <span><b>랑</b>데뷰</span>
+                        </a></li>
                     </ul>
                     <div class="fix">
                         <div class="text">
@@ -79,12 +88,12 @@
             </section>
             <section class="sectors">
                 <div class="inner">
-                    <div class="text">
+                    <div class="text animate" data-animate="motion">
                         <h2 class="title">sectors</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <a href="#">explore</a>
                     </div>
-                    <ul class="list">
+                    <ul class="list animate" data-animate="motion">
                         <li><a href="#">
                             <img src="img/sectors_1.jpg" alt="">
                             <h3>사진</h3>
@@ -102,9 +111,9 @@
             </section>
             <section class="service">
                 <div class="inner">
-                    <div class="img"><img src="img/service.jpg" alt="" ></div>
+                    <div class="img animate" data-animate="motion"><img src="img/service.jpg" alt="" ></div>
                     <div class="text">
-                        <h2 class="title">service</h2>
+                        <h2 class="title animate" data-animate="motion">service</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                             Ducimus veniam mollitia optio aspernatur iusto, enim pariatu<br>
@@ -118,7 +127,7 @@
             <section class="journal">
                 <div class="inner">
                     <h2>journal</h2>
-                    <ul class="list">
+                    <ul class="list animate" data-animate="motion">
                         <li><a href="#">
                             <p class="img"><img src="img/journal_1.jpg" alt=""></p>
                             <h3>화장품</h3>
