--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/script_main.js"></script>
     <script src="js/scrolla.jquery.min.js"></script>
+    <script src="js/splitting.min.js"></script>
 </head>
 <body>
 
@@ -25,18 +26,16 @@
         <div class="contents">
             <section class="visual">
                 <video class="waves" autoplay muted loop playsinline>
-                    <source src ="img/">
-
-
+                    <source src ="video/cosmeticsVideo.mp4">
                 </video>
 
-                <h2 class="title">Rendezvous</h2>
+                <h2 class="title animate" data-animate="motion" data-splitting>Rendezvous</h2>
 
             </section>
 
             <section class="about">
                 <div class="inner">
-                    <div class="text">
+                    <div class="text animate" data-animate="motion" data-splitting>
 
                         <h2 class="title">about us</h2>
                         <p>
@@ -55,7 +54,7 @@
 
             </section>
             <section class="approach">
-                <div class="inner">
+                <div class="inner" >
                     <ul class="list">
                         <li><a href="#"><img src="img/approach_1.jpg">
                             <span><b>랑</b>데뷰</span>
@@ -66,9 +65,7 @@
                         <li><a href="#"><img src="img/approach_3.jpg">
                             <span><b>랑</b>데뷰</span>
                         </a></li>
-                        <li><a href="#"><img src="img/approach_4.jpg">
-                            <span><b>랑</b>데뷰</span>
-                        </a></li>
+                        
                     </ul>
                     <div class="fix">
                         <div class="text">
@@ -88,7 +85,7 @@
             </section>
             <section class="sectors">
                 <div class="inner">
-                    <div class="text animate" data-animate="motion">
+                    <div class="text animate" data-animate="motion" data-splitting>>
                         <h2 class="title">sectors</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                         <a href="#">explore</a>
@@ -111,9 +108,9 @@
             </section>
             <section class="service">
                 <div class="inner">
-                    <div class="img animate" data-animate="motion"><img src="img/service.jpg" alt="" ></div>
+                    <div class="img animate" data-animate="motion"><img src="img/model.jpg" alt="" ></div>
                     <div class="text">
-                        <h2 class="title animate" data-animate="motion">service</h2>
+                        <h2 class="title animate" data-animate="motion" data-splitting>>service</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                             Ducimus veniam mollitia optio aspernatur iusto, enim pariatu<br>
