전체적인 틀 수정

--- a/index.html
+++ b/index.html
@@ -88,85 +88,24 @@
                     </div>
                 </div>
             </section>
-            <section class="journal">
-                <div class="inner">
-                    <h2>journal</h2>
-                    <ul class="list animate" data-animate="motion">
-                        <li><a href="#">
-                            <p class="img"><img src="img/journal_1.jpg" alt=""></p>
-                            <h3>화장품</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. \
-                                Incidunt ratione a fugit assumenda beatae 
-                                nam ex ipsa ipsam cupiditate, dolorum in obcaecati
-                                 minima rem eaque quia harum illum nesciunt tempora.</p>
-                        </a></li>
-                        <li><a href="#">
-                            <p class="img"><img src="img/journal_2.jpg" alt=""></p>
-                            <h3>화장품</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. \
-                                Incidunt ratione a fugit assumenda beatae 
-                                nam ex ipsa ipsam cupiditate, dolorum in obcaecati
-                                 minima rem eaque quia harum illum nesciunt tempora.</p>
-                        </a></li>
-                        <li><a href="#">
-                            <p class="img"><img src="img/journal_3.jpg" alt=""></p>
-                            <h3>화장품</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. \
-                                Incidunt ratione a fugit assumenda beatae 
-                                nam ex ipsa ipsam cupiditate, dolorum in obcaecati
-                                 minima rem eaque quia harum illum nesciunt tempora.</p>
-                        </a></li>
-                        <li><a href="#">
-                            <p class="img"><img src="img/journal_4.jpg" alt=""></p>
-                            <h3>화장품</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. \
-                                Incidunt ratione a fugit assumenda beatae 
-                                nam ex ipsa ipsam cupiditate, dolorum in obcaecati
-                                 minima rem eaque quia harum illum nesciunt tempora.</p>
-                        </a></li>
-                    </ul>
-                </div>
-
-            </section>
-
-       
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+          
         </div>
 
-             <!--footer-->
-             <footer>
-                <div class="inner">
-                    <h1 class="footerLogo">a</h1>
-                    <ul class="contact">
-                        <li>Carrer del jardi Botanic 4, Palma De Mallorca, 07012</li>
-                        <li>+34 123 456 789 | abcd.com</li>
-                    </ul>
-                    <ul class="sns">
-                        <li><a href="#">INSTARGRAM</a></li>
-                        <li><a href="#">FACEBOOK</a></li>
-                        <li><a href="#">LINKED</a></li>
-                    </ul>
-                </div>
-            </footer>
+                 <!--footer-->
+         <footer>
+            <div class="inner">
+                <h1 class="footerLogo">à</h1>
+                <ul class="contact">
+                    <li>Carrer del Jardi Botànic 4, Palma De Mallorca, 07012</li>
+                    <li>+34 123 456 789 | abcd.com</li>
+                </ul>
+                <ul class="sns">
+                    <li><a href="#">INSTAGRAM</a></li>
+                    <li><a href="#">FACEBOOK</a></li>
+                    <li><a href="#">LINKEDIN</a></li>
+                </ul>
+            </div>
+        </footer>
 
 
     </div>
