이미지 변경

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="inner">
                 <a href="#" class="gnbBtn"><span class="a"></span><span class="b"></span></a>
-                <a href="#" class="logo">Rendezvous</a>
+                <a href="#" class="logo">여우별</a>
                 <a href="#" class="contact">contact</a>
             </div>
         </header>
@@ -30,7 +30,7 @@
                     <source src ="video/cosmeticsVideo.mp4">
                 </video>
 
-                <h2 class="title animate" data-animate="motion" data-splitting>Rendezvous</h2>
+               <h2 class="title animate" data-animate="motion" data-splitting>여우별</h2>
 
             </section>
 
@@ -63,15 +63,18 @@
                     </div>
                     <ul class="list">
                         <li> <a href="#">
-                            <img src="img/face.jpg" onmouseover="this.src='img/lip.jpg'" onmouseout="this.src='img/face.jpg'">
+                            <img src="img/model.png" onmouseover="this.src='img/outer.jpg'" onmouseout="this.src='img/model.png'">
+                            <h1>상의</h1>
 
                         </a></li>
                         <li><a href="#">
-                            <img src="img/face.jpg" onmouseover="this.src='img/eye.jpg'" onmouseout="this.src='img/face.jpg'">
+                            <img src="img/model.png" onmouseover="this.src='img/pants.jpg'" onmouseout="this.src='img/model.png'">
+                            <h1>하의</h1>
                             
                         </a></li>
                         <li><a href="#">
-                            <img src="img/face.jpg" onmouseover="this.src='img/cheek.jpg'" onmouseout="this.src='img/face.jpg'">
+                            <img src="img/model.png" onmouseover="this.src='img/acc.jpg'" onmouseout="this.src='img/model.png'">
+                            <h1>악세사리</h1>
                         </a></li>
                     </ul>
                     
