상품페이지 구현

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
+    
     <!--script-->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/script_main.js"></script>
@@ -62,7 +63,7 @@
                             <h1>카테고리</h1>
                     </div>
                     <ul class="list">
-                        <li> <a href="#">
+                        <li> <a href="Product/prdouct.html">
                             <img src="img/model.png" onmouseover="this.src='img/outer.jpg'" onmouseout="this.src='img/model.png'">
                             <h1>상의</h1>
 
@@ -84,7 +85,7 @@
             
             <section class="service">
                 <div class="inner">
-                    <div class="img animate" data-animate="motion"><img src="img/model.jpg" alt="" ></div>
+                    <div class="img animate" data-animate="motion"><img src="img/songang.png" alt="" ></div>
                     <div class="text">
                         <h2 class="title animate" data-animate="motion" data-splitting>>service</h2>
                         <p>
