상세페이지 구현

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <div class="inner">
                 <a href="#" class="gnbBtn"><span class="a"></span><span class="b"></span></a>
-                <a href="#" class="logo">여우별</a>
+                <a href="#" class="logo">캐트릿</a>
                 <a href="#" class="contact">contact</a>
             </div>
         </header>
@@ -63,17 +63,17 @@
                             <h1>카테고리</h1>
                     </div>
                     <ul class="list">
-                        <li> <a href="Product/prdouct.html">
+                        <li> <a href="Product/Outer.html">
                             <img src="img/model.png" onmouseover="this.src='img/outer.jpg'" onmouseout="this.src='img/model.png'">
                             <h1>상의</h1>
 
                         </a></li>
-                        <li><a href="#">
+                        <li><a href="Product/Pants.html">
                             <img src="img/model.png" onmouseover="this.src='img/pants.jpg'" onmouseout="this.src='img/model.png'">
                             <h1>하의</h1>
                             
                         </a></li>
-                        <li><a href="#">
+                        <li><a href="Product/acc.html">
                             <img src="img/model.png" onmouseover="this.src='img/acc.jpg'" onmouseout="this.src='img/model.png'">
                             <h1>악세사리</h1>
                         </a></li>
@@ -106,8 +106,8 @@
             <div class="inner">
                 <h1 class="footerLogo">à</h1>
                 <ul class="contact">
-                    <li>Carrer del Jardi Botànic 4, Palma De Mallorca, 07012</li>
-                    <li>+34 123 456 789 | abcd.com</li>
+                    <li>대림대학교 컴퓨터정보학부</li>
+                    <li>tel:010-1234-56789 | abcd.com</li>
                 </ul>
                 <ul class="sns">
                     <li><a href="#">INSTAGRAM</a></li>
