--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <source src ="video/cosmeticsVideo.mp4">
                 </video>
 
-               <h2 class="title animate" data-animate="motion" data-splitting>여우별</h2>
+               <h2 class="title animate" data-animate="motion" data-splitting>캐트릿</h2>
 
             </section>
 
