--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
                         <h2 class="title">about us</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur<br>
+                            Lorem ipsum dolor sit amet consec
+                            tetur<br>
                              adipisicing elit. Maxime consequatur deserunt <br>
                              fugit voluptates veniam eos voluptate a ab nemo! <br>
                             
