--- a/Product/sweatpants.html
+++ b/Product/sweatpants.html
@@ -37,7 +37,7 @@
   <header>
     <div class="inner">
         <a href="#" class="gnbBtn"><span class="a"></span><span class="b"></span></a>
-        <a href="#" class="logo">캐트릿</a>
+        <a href="../index.html" class="logo">캐트릿</a>
         <a href="#" class="contact">contact</a>
     </div>
 </header>
