--- a/Product/Outer.html
+++ b/Product/Outer.html
@@ -32,7 +32,7 @@
   <header>
     <div class="inner">
         <a href="#" class="gnbBtn"><span class="a"></span><span class="b"></span></a>
-        <a href="#" class="logo">캐트릿</a>
+        <a href="../index.html" class="logo">캐트릿</a>
         <a href="#" class="contact">contact</a>
     </div>
 </header>
@@ -61,12 +61,12 @@
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item outer col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="denimjacket.html" class="item-wrap fancybox">
+            <a href="Jumper.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>항공점퍼</h3>
                 
               </div>
-              <img class="img-fluid" src="../img/img_1.jpg">
+              <img class="img-fluid" src="../img/jumper.jpg">
             </a>
           </div>
           <div class="item shirts col-sm-6 col-md-4 col-lg-4 mb-4">
