--- a/Product/Pants.html
+++ b/Product/Pants.html
@@ -52,15 +52,15 @@
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">전체</a>
-              <a href="#" data-filter=".outer">스웻팬츠</a>
-              <a href="#" data-filter=".shirts">데님</a>
-              <a href="#" data-filter=".mtm">슬랙스</a>
-              <a href="#" data-filter=".tee">레깅스</a>
+              <a href="#" data-filter=".sweatpants">스웻팬츠</a>
+              <a href="#" data-filter=".denim">데님</a>
+              <a href="#" data-filter=".slacks">슬랙스</a>
+              <a href="#" data-filter=".leggins">레깅스</a>
             </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item outer col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item sweatpants col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="sweatpants.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>와이드 스웻 팬츠</h3>
@@ -69,7 +69,7 @@
               <img class="img-fluid" src="../img/pants_1sub.jpg">
             </a>
           </div>
-          <div class="item shirts col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item denim col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>와이드 데님 팬츠</h3>
@@ -78,7 +78,7 @@
               <img class="img-fluid" src="../img/denimpants.jpg">
             </a>
           </div>
-          <div class="item mtm col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item slacks col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>슬랙스</h3>
@@ -87,7 +87,7 @@
               <img class="img-fluid" src="../img/slacks.jpg">
             </a>
           </div>
-          <div class="item tee col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item leggins col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>레깅스</h3>
