--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="inner">
                 <h1 class="footerLogo">캐트릿</h1>
                 <ul class="contact">
-                    <li>대림대학교 컴퓨터정보학부</li>
+                    <li>캐트릿</li>
                     <li>tel:010-1234-56789 </li>
                 </ul>
                 <ul class="sns">
